
- bach.reg, bach.value, bach.pv
    Fixed memory leak related to the text editor window

- bach.roll, bach.score, bach.slot:
    The "addslot" message is now deprecated in favour of the identical "setslot" message. 
        The "addslot" message is still kept for backward compatibility, but you are encouraged to use "setslot" from now on.
    fixed potential memory leak when using transferslots

- bach.roll, bach.score: 
    New "setdurationline" message setting the duration line from a list of pitch breakpoints
    @playheadwidth attribute added, better doc for playcolor and added doc for playheadwidth
    now preschedule playing supports setclock
    removed unnecessary warnings for dynamics2velocities message
    dynamics can now be copy-pasteed
    new "reducefunction" message
    fixed bug potentially causing crashes with label families
    new message "setdurationline"; "addslot" is renamed "setslot" preserving the older for bwcompatibility
    @slopemapping attribute added: new support for Max-type slopes
    fixed bug in getting subvoices
    added @stard and @end message attributes for "dumpselection" message
    now "sel XXX if" message is valid for any notation item, chord/measure/voice included
    fixed bug causing possible crashes at slotinfo definition when extensions mode changed
    fixed bug preventing markers from having a lambda interaction
    fixed bug causing wrong order of accidentals in some key signatures
    the "setcursor" message has a new @zeropimchord attribute for setting the playhead on chords instead of barlines at the beginning of a measure
    fixed bug causing hangs when adding voices
    new "auto" possibility for setting breakpoints via "addbreakpoint"

- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
        Pickup measures are correctly imported
        Accidentals are correctly dealt with when importing multi-voice parts